<resources>
    <string name="app_name">Моя химия</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя</string>
    <string name="nav_header_subtitle">Почта</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_reg">Регистрация</string>
    <string name="menu_login">Авторизация</string>
    <string name="menu_task">Термохимия</string>
    <string name="menu_fav">Избранное</string>

    <string name="email_reg">Введите свой email</string>
    <string name="name">Как вас зовут?</string>
    <string name="password_reg">Придумайте пароль</string>
    <string name="link_reg">Уже есть аккаунт?</string>
    <string name="registrationButton">Зарегистрироваться</string>

    <string name="email_login">Email</string>
    <string name="password_login">Пароль</string>
    <string name="link_log">У меня нет аккаунта</string>
    <string name="loginButton">Войти</string>

    <string name="task_number">Номер</string>
    <string name="task_text">Текст</string>
    <string name="task_answer">Ответ</string>
    <string name="task_formula">Формула</string>

    <string name="error_email">Некорректный адрес!</string>
    <string name="error_empty">Пустое поле!</string>
    <string name="error_max">Максимум 50 символов!</string>
    <string name="error_min">Минимум 7 символов!</string>

    <string name="error_window_title">Упс!</string>
    <string name="error_window_btn">ОК</string>

</resources>