<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    android:layout_margin="4dp"
    android:id="@+id/card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/task_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_number"
            android:textSize="14sp"
            android:layout_margin="6dp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/task_formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_formula"
            android:textSize="14sp"
            android:layout_margin="6dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/task_number"/>

        <TextView
            android:id="@+id/task_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_text"
            android:textSize="14sp"
            android:layout_margin="6dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/task_formula"/>

        <TextView
            android:id="@+id/task_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_answer"
            android:textSize="14sp"
            android:layout_margin="6dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/task_text"/>

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/red"
            android:layout_margin="6dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>