<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dxshulya.wasabi.ui.item.FavoriteItemViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

<!--            <TextView-->
<!--                android:id="@+id/favorite_number"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_margin="6dp"-->
<!--                android:text="@string/task_number"-->
<!--                android:textSize="14sp" />-->

            <TextView
                android:id="@+id/favorite_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="6dp"
                android:text="@string/task_formula"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/favorite_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/favorite_formula"
                android:layout_alignParentStart="true"
                android:layout_margin="6dp"
                android:text="@string/task_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/favorite_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/favorite_text"
                android:layout_alignParentStart="true"
                android:layout_margin="6dp"
                android:text="@string/task_answer"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/favorite_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:src="@drawable/ic_favorite"
                app:tint="@color/red"
                android:onClick="@{() -> viewModel.deleteOrPostFavorite()}"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>